# project-z

./: .gitignore  Cargo.toml
contracts/cw-zportal/: Cargo.toml  t
contracts/cw-zportal/artifacts/: cw-zportal.wasm
contracts/cw-zportal/examples/: schema.rs
contracts/cw-zportal/schema/: execute_msg.json  instantiate_msg.json  query_msg.json  withdraw_msg.json
contracts/cw-zportal/src/: contract.rs  error.rs  msg.rs  state.rs
schema/: withdraw_msg.json
