[package]
name = "zportal-orai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
zportal = { path = "../../packages/zportal" }
bignumber = { path = "../../packages/bignumber" }

cosmwasm-std = { version = "0.13.2" }
cw0 = { version = "0.5.0" }
cw2 = { version = "0.5.0" }
cw20 = { version = "0.5.0" }
# cw-utils = { version = "0.11.0" }
cw-storage-plus = { version = "0.5.0", features = ["iterator"]}

# num256 = "0.3.5"

# cosmwasm-bignumber = "2.2.0"
cosmwasm-storage = { version = "0.13.2", features = ["iterator"] }

schemars = "0.7"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }


[dev-dependencies]
cosmwasm-schema = { version = "0.13.2" }
# cw-multi-test = { version = "0.13.1" }
cw20-base = { version = "0.5.0", features = ["library"] }

# [package.metadata.scripts]
# optimize = """
# docker run --rm -v "$(pwd)":/code \
#   --mount candidate versions found which didn't match: 0.14.0, 0.13.4, 0.13.3, ...type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
#   --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
#   cosmwasm/rust-optimizer:0.12.5
# """
